1998-02-05  Phil Blundell  <philb@gnu.org>

	* lib/ash.c: Don't redefine ARPHRD constant.  Change it from
 	ARPHRD_ASH64 to just ARPHRD_ASH, since the encap is the same for
 	16Mbps.
	* lib/hw.c: Print just `Ash', not `64Mbps Ash'.

1998-01-31  Phil Blundell  <philb@gnu.org>

	* lib/inet6_gr.c (rprint_fib6): Reinstate the "U" flag, although it
 	is always printed.
	* lib/inet_gr.c (rprint_fib): Likewise.	

Sun Jan 25 13:00:00 1998  Philip Blundell  <Philip.Blundell@pobox.com>

	* lib/net-string.c (str_in_buff): Avoid compiler warning.  Remove
 	BSD-isms.  Tidy up.

	* lib/inet6_gr.c, lib/inet_gr.c: Don't display inactive routes
	(ie those without RTF_UP).

	* lib/Makefile: Add support for Rose, FDDI and Ash.

	* rarp.c: Add support for /etc/ethers.  Patch from haardt@gmd.de
 	(Michael Haardt).
	* lib/pathnames.h: Likewise.

	* config.in, lib/hw.c: Tidy up.  Add support for Rose and FDDI.
	* lib/fddi.c, lib/rose.c, lib/rose_gr.c: New files, copied from
	Bernd's net-tools-pre-1.34.

	* ifconfig.c: Try to use AF_ROSE sockets.

	* ifconfig.c: Don't use SIOCGIFCOUNT to work out how many
 	interfaces to display; use SIOCGIFCONF with a null buffer
 	instead.

	* ifconfig.c: Don't assume ifr_qlen is defined if SIOCSIFTXQLEN
	is.

	* lib/fddi.c: Use <netinet/if_fddi.h> not <linux/if_fddi.h> for
	glibc.
	* lib/rose.c: Include <netrose/rose.h> for glibc.
	
Tue Sep 23 20:58:27 1997  Philip Blundell  <Philip.Blundell@pobox.com>

	* ifconfig.c (if_getstats): use _PATH_PROCNET_DEV rather than
 	hardcoding.
	* lib/pathnames.h (_PATH_PROCNET_DEV): define.

	* ifconfig.c (set_flag): tidy up.
	(clr_flag): likewise.

Sun Sep 21 18:26:24 1997  Philip Blundell  <Philip.Blundell@pobox.com>

	* Makefile (RELEASE): set to 1.432
	* version.h (RELEASE): likewise.

	* TODO: updated.
	* README: likewise.

	* ifconfig.c (set_flag): print error message if no such interface.
	(clr_flag): likewise.

	* lib/net-features.h: remove ipfw stuff, add INET6
	